--- a/app/webroot/css/jquery/plugins/hoe/hoe.css
+++ b/app/webroot/css/jquery/plugins/hoe/hoe.css
@@ -12,17 +12,22 @@ DEMO URL: http://gohooey.com/demo/sidebar/hoedemo.html
     4.2 CONTENT SECTION STYLES
 	4.3 MINIMIZED LEFT PANEL STYLE
 	4.4 THEME STYLE ACCORDING PHONE
+5.	Boxed Theme Layout Style
+6.	Theme Background Color Style
 */
 
 
 /********** 1. IMPORTS **********/
 /********************************/
+/*@import url('bootstrap.min.css');*/
 @import url('hoe-overlay-effect.css');
 @import url('hoe-push-effect.css');
 @import url('hoe-shrink-effect.css');
 @import url('hoe-rightsidebar.css');
 @import url('hoe-horizontal-navigation.css');
 @import url('hoe-theme-color.css');
+@import url('extra.css');
+@import url('header.css');
 /********** 2. RESET STYLES **********/
 /*************************************/
 
@@ -45,7 +50,7 @@ body{position:relative;}
 	font-family: "lato", sans-serif;
 	direction: ltr;
     line-height: 20px;
-    font-size: 16px;
+    font-size: 13px;
     overflow-x: hidden;
     overflow-y: hidden;
 	width: 100%;
@@ -62,9 +67,8 @@ body{position:relative;}
     width: 100%;
     height: 50px;
     z-index: 10;
-    overflow: hidden;
 	position:relative;
-	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+	/*box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);*/
 }
 .hoe-left-header {
     background: #555;
@@ -96,11 +100,12 @@ body{position:relative;}
     height: 50px;
     line-height: 50px;
     z-index: 101;
+	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
 	margin-left: 230px;
-	position: relative;
+	position: fixed;
 }
-.hoe-right-header ul {
-    display: inline-block;
+.hoe-right-header > ul {
+    display: block;
     margin: 0;
     padding: 0;
 }
@@ -108,7 +113,7 @@ body{position:relative;}
   display: inline;
   float: left;
 }
-.hoe-right-header li a {
+.hoe-right-header > li  a {
     color: #7e7e7e;
     padding: 17px 15px;
 }
@@ -119,15 +124,16 @@ body{position:relative;}
 }
 .hoe-right-header a i {
     color: #7e7e7e;
-    font-size: 16px;
+    font-size: 14px;
 }
 .right-navbar {
     float: right;
+	padding-right: 7px !important;
 }
 .right-navbar li a i {
-    font-size: 16px;
+    font-size: 14px;
 }
-.left-navbar li:first-child {
+.left-navbar > li:first-child {
     padding-left: 50px;
 }
 .hoe-sidebar-toggle a:after {
@@ -135,7 +141,7 @@ body{position:relative;}
     border: 0px solid #efefef;
     content: "\f0c9";
     font-family: FontAwesome;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 50px;
     padding: 0px 17px;
     position: absolute;
@@ -161,7 +167,7 @@ body{position:relative;}
     position: relative;
 }
 #hoe-header .hoe-right-header[hoe-position-type="absolute"] {
-    position: absolute;
+    position: relative;
 }
 #hoe-header .hoe-right-header[hoe-position-type="fixed"] {
 	padding-right: 230px;
@@ -186,7 +192,7 @@ body{position:relative;}
     top: 0;
 	position:absolute;
 	float:left;
-	min-height:10000px;
+	min-height:100%;
     z-index: 100;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
 }
@@ -232,9 +238,9 @@ body{position:relative;}
     border-top: 1px solid #efefef;
     color: #7e7e7e;
     display: block;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 500;
-    padding: 10px 16px;
+    padding: 10px 10px;
     position: relative;
 }
 #hoe-left-panel .panel-list > li:last-child > a {
@@ -255,8 +261,8 @@ body{position:relative;}
 }
 #hoe-left-panel .panel-list > li > a > i {
     display: inline;
-    font-size: 16px;
-    padding-right: 20px;
+    font-size: 14px;
+    padding-right: 6px;
 }
 #hoe-left-panel .panel-list > li > a span.menu-text {
     display: inline-block;
@@ -302,9 +308,9 @@ body{position:relative;}
     border-top: 1px solid #efefef;
     color: #7e7e7e;
     display: block;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 500;
-    padding: 10px 16px;
+    padding: 10px 10px;
     position: relative;
 }
 #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu {
@@ -319,6 +325,16 @@ body{position:relative;}
 #hoe-left-panel .panel-list > li.hoe-has-menu > ul ul {
     display: none;
 }
+#hoe-left-panel .panel-list > li.hoe-has-menu.opened > ul {
+    display: block;
+}
+#hoe-left-panel .panel-list > li.hoe-has-menu.opened > ul > li.hoe-has-menu.opened > ul {
+    display: block;
+}
+#hoe-left-panel .panel-list > li.hoe-has-menu.opened > ul > li.hoe-has-menu.opened > ul > li.hoe-has-menu.opened > ul {
+    display: block;
+}
+
 #hoe-left-panel .panel-list > li.hoe-has-menu.active > ul {
     display: block;
 }
@@ -359,13 +375,15 @@ body{position:relative;}
 }
 #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li > a span.menu-text:before {
     font-family: FontAwesome;
-    font-size: 16px;
+    content: "\f0da";
+    font-size: 14px;
     position: relative;
     float: left;
     left: 4px;
 }
 #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li > a span.menu-text:before {
     font-family: FontAwesome;
+    content: "\f0da";
     font-size: 12px;
     position: relative;
     float: left;
@@ -373,13 +391,15 @@ body{position:relative;}
 }
 #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li > a span.menu-text:before {
     font-family: FontAwesome;
-    font-size: 16px;
+    content: "\f0da";
+    font-size: 14px;
     position: relative;
     float: left;
     left: 18px;
 }
 #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li > a span.menu-text:before {
     font-family: FontAwesome;
+    content: "\f0da";
     font-size: 12px;
     position: relative;
     float: left;
@@ -401,7 +421,7 @@ body{position:relative;}
     display: none;
 }
 #hoe-left-panel .panel-list li a .label {
-    border-radius: 0em;
+    border-radius: 0.25em;
     color: #7e7e7e;
     display: inline;
     font-size: 75%;
@@ -475,24 +495,24 @@ body{position:relative;}
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li > a > i {
     display: inline;
     font-size: 15px;
-    padding-left: 15px;
+    padding-left: 6px;
     padding-right: 6px;
 }
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li:hover > a,
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li:focus > a {
     display: block;
     position: relative;
-    width: 280px;
+    width: 230px;
     margin-bottom: -1px;
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 0px 4px 4px 0px;
 }
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li:hover > a,
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li:focus > a {
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 0px 4px 4px 0px;
 }
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li.hoe-has-menu:hover > a,
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li.hoe-has-menu:focus > a {
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 0px 4px 0px 0px;
     background: #f1f1f1;
 }
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li:hover > a span.menu-text,
@@ -509,19 +529,19 @@ body{position:relative;}
     display: none !important;
     position: absolute;
     left: 50px;
-    width: 230px;
+    width: 180px;
 }
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li.hoe-has-menu:hover > ul.hoe-sub-menu,
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li.hoe-has-menu:focus > ul.hoe-sub-menu {
     display: block !important;
     border-right: 1px solid #efefef;
-	 width: 230px;
-	 left: 50px;
+	width: 180px;
+	left: 50px;
 }
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu ul.hoe-sub-menu {
     display: none !important;
     position: absolute;
-    width: 230px;
+    width: 180px;
     left: 0;
 }
 .hoe-minimized-lpanel #hoe-left-panel .panel-list > li.hoe-has-menu:hover > ul.hoe-sub-menu ul.hoe-sub-menu,
@@ -627,9 +647,7 @@ body{position:relative;}
 #hoeapp-wrapper[hoe-device-type="phone"] .hoe-right-header {
   margin-left: 0px;
 }
-#hoeapp-wrapper[hoe-device-type="phone"] .hoe-right-header li a {
-  padding: 17px 13px;
-}
+
 #hoeapp-wrapper[hoe-device-type="phone"] #hoe-left-panel {
     display: block;
     z-index: 1024;
@@ -637,9 +655,9 @@ body{position:relative;}
 #hoeapp-wrapper[hoe-device-type="phone"] #main-content {
     margin-left: 0px;
 }
-#hoeapp-wrapper[hoe-device-type="phone"] .hoe-right-header .left-navbar li:first-child {
-    padding-left: 5px;
-}
+
+
+
 #hoeapp-wrapper[hoe-device-type="phone"] .hoe-left-header > .hoe-sidebar-toggle > a {
     display: block;
 }
@@ -654,7 +672,7 @@ body{position:relative;}
 }
 #hoeapp-wrapper[hoe-device-type="phone"] .hoe-left-header .hoe-sidebar-toggle a:after {
     background: transparent;
-    border-radius: 0px;
+    border-radius: 4px;
     content: "";
     font-family: FontAwesome;
     font-size: 16px;
@@ -667,7 +685,7 @@ body{position:relative;}
     display: block !important;
     color: #fff;
     border: 0px solid #fff;
-    font-size: 16px;
+    font-size: 14px;
 }
 #hoeapp-wrapper[hoe-device-type="phone"].hoe-hide-lpanel  #hoeapp-container[hoe-lpanel-effect="shrink"] #main-content {
   margin-left: 0px;
@@ -704,6 +722,7 @@ body{position:relative;}
 #hoeapp-wrapper[hoe-device-type="phone"] #hoe-header[hoe-lpanel-effect="shrink"] .hoe-right-header[hoe-position-type="fixed"] {
     margin-left: 0px;
 	padding-right: 0;
+	position: fixed;
 }
 #hoeapp-wrapper[hoe-device-type="phone"].hoe-hide-lpanel #hoe-header[hoe-lpanel-effect="overlay"] .hoe-right-header[hoe-position-type="relative"] {
     margin-left: 0px;
@@ -743,3 +762,46 @@ body{position:relative;}
 /*******************************main container Style Close Here ***********************************/
 
 /****************************** Default Theme Style Close ******************************************/
+
+/*Boxed Theme Layout Style Start*/
+body[theme-layout="box-layout"] #hoeapp-wrapper[hoe-device-type="desktop"] {
+	width:96%;
+	margin:0 auto;
+}
+/*Boxed Theme Layout Style Close*/
+ 
+/*Theme Background Color in Start */
+body[theme-layout="box-layout" hoe-nav-placement="right"] #hoeapp-wrapper[hoe-device-type="desktop"]{
+	margin:0 auto;
+}
+body[theme-bg="bg1"]{
+	 background-image: url("../images/bg1.png");
+}
+body[theme-bg="bg2"]{
+	 background-image: url("../images/bg2.png");
+}
+body[theme-bg="bg3"]{
+	 background-image: url("../images/bg3.png");
+}
+body[theme-bg="bg4"]{
+	 background-image: url("../images/bg4.png");
+}
+body[theme-bg="bg5"]{
+	 background-image: url("../images/bg5.png");
+}
+body[theme-bg="bg6"]{
+	 background-image: url("../images/bg6.png");
+}
+body[theme-bg="bg7"]{
+	 background-image: url("../images/bg7.png");
+}
+body[theme-bg="bg8"]{
+	 background-image: url("../images/bg8.png");
+}
+body[theme-bg="bg9"]{
+	 background-image: url("../images/bg9.png");
+}
+/*Theme Background Color in Close */
+
+
+
