--- a/app/webroot/css/jquery/plugins/hoe/hoe-horizontal-navigation.css
+++ b/app/webroot/css/jquery/plugins/hoe/hoe-horizontal-navigation.css
@@ -55,7 +55,8 @@ body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"
 
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"]  #hoe-left-panel .panel-list > li > a > i {
-    padding-right: 0;
+    padding-left: 15px;
+    padding-right: 6px;
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu {
   display: none;
@@ -68,20 +69,20 @@ body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu {
   display: none;
   list-style: outside none none;
-  width: 156px;
+  width: 250px;
   position:absolute;
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu {
-  left: 156px;
+  left: 250px;
   position: absolute;
-  width: 156px;
+  width: 250px;
   z-index: 1;
   margin-top:-41px;
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu{
-  left: 156px;
+  left: 250px;
   position: absolute;
-  width: 156px;
+  width: 250px;
   z-index: 1;
   margin-top:-41px;
 }
@@ -110,18 +111,15 @@ body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"
   margin: 0 35px;
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li > a span.menu-text:before {
-    content: "\f105";
     font-size: 14px;
     float: left;
     left: 4px;
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li > a span.menu-text:before {
-    content: "\f105";
     font-size: 14px;
     left: 4px;
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li.hoe-has-menu > ul.hoe-sub-menu > li > a span.menu-text:before {
-    content: "\f105";
     font-size: 14px;
     float: left;
     left: 4px;
@@ -158,6 +156,7 @@ body[hoe-navigation-type="horizontal"] #hoeapp-wrapper.compact-hmenu[hoe-device-
 body[hoe-navigation-type="horizontal"] #hoeapp-wrapper.compact-hmenu[hoe-device-type="desktop"] #hoe-left-panel .panel-list > li > a > i {
   display: block;
   padding-right: 0;
+  margin: 0 auto;
   text-align: center;
 }
 body[hoe-navigation-type="horizontal"] #hoeapp-container[hoe-lpanel-effect="push"] #main-content {
