--- a/app/webroot/css/jquery/plugins/hoe/hoe.css
+++ b/app/webroot/css/jquery/plugins/hoe/hoe.css
@@ -118,7 +118,7 @@ body{position:relative;}
 }
 .hoe-right-header li a:hover,
 .hoe-right-header li a:focus {
-    background: #efefef;
+    /*background: #efefef;*/
     text-decoration: none;
 }
 .hoe-right-header a i {
@@ -192,7 +192,7 @@ body{position:relative;}
 	position:absolute;
 	float:left;
 	min-height:100%;
-    z-index: 100;
+    z-index: 1;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
 }
 #hoe-left-panel .profile-box {
